kustomize/overlays/dev/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    environment: dev
    app: mern-stack
    istio-injection: enabled
