kustomize/overlays/dev/app-patches.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: dev-backend-service-canary
      stableService: dev-backend-service-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: dev-mern-route
  template:
    spec:
      # Not auto-rewritten by Kustomize's namePrefix either (only object names/labels/
      # selectors it recognizes get rewritten) — same reason as canaryService above.
      serviceAccountName: dev-backend
      containers:
        - name: backend
          image: ghcr.io/atkaridarshan04/cloudnative-devops-blueprint/bookstore-backend # Tag managed by Kustomize images

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: dev-frontend-service-canary
      stableService: dev-frontend-service-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: dev-mern-route
  template:
    spec:
      serviceAccountName: dev-frontend
      containers:
        - name: frontend
          image: ghcr.io/atkaridarshan04/cloudnative-devops-blueprint/bookstore-frontend # Tag managed by Kustomize images
