kustomize/overlays/dev/httproute-patch.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mern-route
spec:
  hostnames:
    - dev.cndb.atkaridarshan.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dev-frontend-service-stable
          port: 80
          weight: 100
        - name: dev-frontend-service-canary
          port: 80
          weight: 0
    - matches:
        - path:
            type: PathPrefix
            value: /books
      backendRefs:
        - name: dev-backend-service-stable
          port: 8000
          weight: 100
        - name: dev-backend-service-canary
          port: 8000
          weight: 0
