kustomize/overlays/dev/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-frontend-service
                port:
                  number: 80
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: dev-backend-service
                port:
                  number: 8000
